--- a/QtWidgetstr.ui
+++ b/QtWidgetstr.ui
@@ -24,9 +24,9 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QPushButton" name="enterButton">
+     <widget class="QPushButton" name="loadButton">
       <property name="text">
-       <string>Enter</string>
+       <string>Load</string>
       </property>
      </widget>
     </item>
@@ -67,6 +67,29 @@
      <width>151</width>
      <height>23</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="showlineEdit">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>90</y>
+     <width>241</width>
+     <height>23</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>240</y>
+     <width>68</width>
+     <height>15</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
    </property>
   </widget>
  </widget>
