--- a/QtWidgetstr.ui
+++ b/QtWidgetstr.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>600</width>
-    <height>400</height>
+    <height>563</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>310</y>
+     <x>250</x>
+     <y>430</y>
      <width>311</width>
      <height>51</height>
     </rect>
@@ -63,7 +63,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>90</y>
+     <y>60</y>
      <width>151</width>
      <height>23</height>
     </rect>
@@ -73,7 +73,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>90</y>
+     <y>60</y>
      <width>241</width>
      <height>23</height>
     </rect>
@@ -82,14 +82,24 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>240</y>
+     <x>60</x>
+     <y>120</y>
      <width>68</width>
      <height>15</height>
     </rect>
    </property>
    <property name="text">
     <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QListWidget" name="listWidget">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>160</y>
+     <width>471</width>
+     <height>192</height>
+    </rect>
    </property>
   </widget>
  </widget>
