--- a/QtWidgetstr.ui
+++ b/QtWidgetstr.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
+    <width>529</width>
     <height>563</height>
    </rect>
   </property>
@@ -16,10 +16,10 @@
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>430</y>
+     <x>200</x>
+     <y>530</y>
      <width>311</width>
-     <height>51</height>
+     <height>31</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -31,9 +31,9 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="cancelButton">
+     <widget class="QPushButton" name="loadPtrButton">
       <property name="text">
-       <string>Cancel</string>
+       <string>LoadPtr</string>
       </property>
      </widget>
     </item>
@@ -51,20 +51,20 @@
      </spacer>
     </item>
     <item>
-     <widget class="QPushButton" name="exitButton">
+     <widget class="QPushButton" name="SaveButton">
       <property name="text">
-       <string>Exit</string>
+       <string>Save</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="inputlineEdit">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>10</x>
      <y>60</y>
-     <width>151</width>
+     <width>181</width>
      <height>23</height>
     </rect>
    </property>
@@ -72,9 +72,9 @@
   <widget class="QLineEdit" name="showlineEdit">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>200</x>
      <y>60</y>
-     <width>241</width>
+     <width>311</width>
      <height>23</height>
     </rect>
    </property>
@@ -82,7 +82,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>30</x>
      <y>120</y>
      <width>68</width>
      <height>15</height>
@@ -95,12 +95,40 @@
   <widget class="QListWidget" name="listWidget">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>10</x>
      <y>160</y>
-     <width>471</width>
-     <height>192</height>
+     <width>181</width>
+     <height>351</height>
     </rect>
    </property>
+  </widget>
+  <widget class="QTableWidget" name="tableWidget">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>160</y>
+     <width>311</width>
+     <height>351</height>
+    </rect>
+   </property>
+   <property name="rowCount">
+    <number>9</number>
+   </property>
+   <property name="columnCount">
+    <number>3</number>
+   </property>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <column/>
+   <column/>
+   <column/>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
