--- a/QtWidgetstr.ui
+++ b/QtWidgetstr.ui
@@ -26,7 +26,7 @@
     <item>
      <widget class="QPushButton" name="loadButton">
       <property name="text">
-       <string>加载</string>
+       <string>加载参数</string>
       </property>
      </widget>
     </item>
@@ -224,9 +224,9 @@
   <widget class="QWidget" name="horizontalLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>800</x>
+     <x>770</x>
      <y>100</y>
-     <width>91</width>
+     <width>121</width>
      <height>51</height>
     </rect>
    </property>
@@ -234,7 +234,7 @@
     <item>
      <widget class="QPushButton" name="selectButton">
       <property name="text">
-       <string>选择</string>
+       <string>打开模型界面</string>
       </property>
      </widget>
     </item>
